# lumina

./: .env  README.md  docker-compose.yml
docs/: architecture.md
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
infra/prometheus/: prometheus.yml
infra/qdrant/: config.yaml
services/crawler/: Dockerfile  main.py  redis_stream_worker.py  requirements.txt  wikipedia_dump_parser.py
services/gateway/: Dockerfile  app.py  requirements.txt
services/inference/: Dockerfile  app.py  pyproject.toml  requirements.txt
