[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumina-inference"
version = "0.2.0"
description = "Inference service for Lumina Distributed Edition"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "pydantic==2.11.7",
  "sentence-transformers==5.1.0",
  "uvicorn==0.35.0",
]

[tool.setuptools]
py-modules = ["app"]
